# XAgent

./: .env.example  .gitignore  AGENTS.md  Makefile  README.md  agent_loop.py  main.py  pyproject.toml  requirements.txt
desktop/: README.md  package.json  pnpm-lock.yaml
desktop/src/main/: index.ts
docs/: PITFALLS.md  PROJECT_ARCHITECTURE_STATUS.md  WORKSPACE_PERMISSION_ARCHITECTURE.md
sandbox/: docker_executor.py  executor.py  macos_executor.py
security/: circuit_breaker.py  policy.py
server/: app.py
server/processors/: request_dispatcher.py  title_processor.py
server/protocol/: events.py  serialization.py
server/runtime/: model_config.py  model_stream.py  session_state.py  transcript_events.py  turn_runner.py  websocket_context.py
server/views/: session_summary.py
session/: models.py  recovery.py  store.py  transcript.py
tests/: test_macos_executor.py  test_security_policy.py  test_server_events.py  test_server_websocket.py  test_session_store.py  test_tool_registry.py  test_workspace.py
tools/: __init__.py  edit_file.py  grep.py  read_file.py  registry.py  run_command.py  toolkit.py  types.py  web_fetch.py  write_file.py
tools/core/: __init__.py  catalog.py  protocol.py  registry.py  router.py  runner.py  types.py
tools/filesystem/: __init__.py  edit_file.py  read_file.py  write_file.py
tools/interaction/: __init__.py  ask_user.py  ask_user_spec.py
tools/network/: __init__.py  web_fetch.py
tools/search/: __init__.py  grep.py
tools/shell/: __init__.py  run_command.py
workspace/: __init__.py  manager.py  models.py  validator.py
(+15 files in other folders)
