[project]
name = "codex-mini"
version = "0.1.0"
description = "Codex 类 Agent（Python 后端最小实现）"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "docker>=7.0.0",
    "python-dotenv>=1.0.1",
    "litellm>=1.67.0",
    "langgraph>=0.2.66",
    "pydantic>=2.7.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
